--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,38 +1,39 @@
-# This is a basic workflow to help you get started with Actions
+name: generate animation
 
-name: Snake Animation
-
-# Controls when the workflow will run
 on:
+  # run automatically every 6 hours
   schedule:
-  - cron: "0 */6 * * *"
+    - cron: "0 */6 * * *" 
+  
+  # allows to manually run the job at any time
   workflow_dispatch:
-  # Triggers the workflow on push or pull request events but only for the main branch
+  
+  # run on every push on the master branch
   push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+    branches:
+    - master
+    
+  
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
+  generate:
     runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
+    timeout-minutes: 10
+    
     steps:
+      # generates a snake game from a github user (<github_user_name>) contributions graph, output a svg animation at <svg_out_path>
       - name: generate github-contribution-grid-snake.svg
         uses: Platane/snk/svg-only@v1.1.2
         with:
           github_user_name: ${{ github.repository_owner }}
           svg_out_path: dist/github-contribution-grid-snake.svg
-          
-     - name: push github-contribution-grid-snake.svg to the output branch
-       uses: crazy-max/ghaction-github-pages@v2.6.0
-       with:
+
+      # push the content of <build_dir> to a branch
+      # the content will be available at https://raw.githubusercontent.com/<github_user>/<repository>/<target_branch>/<file> , or as github page
+      - name: push github-contribution-grid-snake.svg to the output branch
+        uses: crazy-max/ghaction-github-pages@v2.6.0
+        with:
           target_branch: output
           build_dir: dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      
